clusters/casa/apps/element/chart/templates/element-web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-web
  namespace: element
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: element-web
  template:
    metadata:
      labels:
        app: element-web
    spec:
      enableServiceLinks: false
      containers:
        - name: element-web
          image: "vectorim/element-web:v1.12.29@sha256:da32e88c8dafe2c3d4f40ca5e90ab2f43a7c9ac35f0977ec7662dcb4fdcd56d8"
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: "1"
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /app/config.json
              subPath: config.json
              readOnly: true
            - name: log-format
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: log-format
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: default.conf.template
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: element-web-config
        - name: log-format
          configMap:
            name: element-web-log-format
            defaultMode: 0444
