clusters/casa/apps/element/chart/templates/matrix-rtc-auth.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-rtc-auth
  namespace: element
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: matrix-rtc-auth
  template:
    metadata:
      labels:
        app: matrix-rtc-auth
    spec:
      enableServiceLinks: false
      containers:
        - name: matrix-rtc-auth
          image: "ghcr.io/element-hq/lk-jwt-service:0.7.0@sha256:e0c7cecfa74e2342a3e79d47e1d4ab4bd228fe05b1a4dc4ba7f807686b0c214b"
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: "1"
              memory: 256Mi
