clusters/casa/apps/element/chart/templates/valkey.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element-valkey
  namespace: element
spec:
  type: ClusterIP
  selector:
    app: element-valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
      protocol: TCP
